backend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-backend
  namespace: loan-app
  labels:
    app: loan-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-backend
  template:
    metadata:
      labels:
        app: loan-backend
    spec:
      containers:
        - name: loan-backend
          image: us-docker.pkg.dev/openenv-7mhsq/asa-demo/loan-backend-chatbot:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gcp-sa-key
              mountPath: /var/secrets/google
              readOnly: true

      volumes:
        - name: gcp-sa-key
          secret:
            secretName: gcp-sa-key
